--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,13 @@ keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
 description = "Stylus hello world example"
 
 [dependencies]
-alloy-primitives = "=0.7.6"
-alloy-sol-types = "=0.7.6"
+alloy-primitives = { version = "=0.7.6", default-features = false }
+alloy-sol-types = { version = "=0.7.6", default-features = false }
 mini-alloc = "0.4.2"
-stylus-sdk = "0.6.0"
-hex = "0.4.3"
+stylus-sdk = { version = "0.6.0", default-features = false }
+hex = { version = "0.4.3", default-features = false }
 dotenv = "0.15.0"
+openzeppelin-stylus = "0.1.0"
 
 [dev-dependencies]
 tokio = { version = "1.12.0", features = ["full"] }
