--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,15 +12,15 @@ description = "Stylus hello world example"
 alloy-primitives = { version = "=0.7.6", default-features = false }
 alloy-sol-types = { version = "=0.7.6", default-features = false }
 mini-alloc = "0.4.2"
-stylus-sdk = { version = "0.6.0", default-features = false }
+stylus-sdk = "0.6.0"
 hex = { version = "0.4.3", default-features = false }
-dotenv = "0.15.0"
-openzeppelin-stylus = "0.1.0"
+# dotenv = "0.15.0"
+openzeppelin-stylus = { git = "https://github.com/OpenZeppelin/rust-contracts-stylus/", rev = "06146bbac2a369fa6a366225d838a97bbf9ae7a7", features = ["std"] }
 
 [dev-dependencies]
-tokio = { version = "1.12.0", features = ["full"] }
-ethers = "2.0"
-eyre = "0.6.8"
+# tokio = { version = "1.12.0", features = ["full"] }
+# ethers = "2.0"
+# eyre = "0.6.8"
 
 [features]
 export-abi = ["stylus-sdk/export-abi"]
